@@ -16,6 +16,7 @@
 * Highlight the "New Messages" link when you have new PMs
 * Add a quick reply for PMs: write a reply while having the original message on
   the same page
+* Add buttons to follow, add as friend, or PM a user from QuickWhois
 * Other minor bug fixes and enhancements
 
 **Note on signatures:** If you use your default GameFAQs signature, but still
