@@ -14,6 +14,7 @@
     * Highlight the "New Messages" link when you have new PMs
     * Add a quick reply for PMs: write a reply while having the original message
       on the same page
+    * Add buttons to follow, add as friend, or PM a user from QuickWhois
     * Other minor bug fixes and enhancements
 
 2011-11-25:
